src/main/java/antlr4gen/LinterParser.java
// Generated from C:/Users/sebas/UalLintApp/grammar/LinterParser.g4 by ANTLR 4.13.2

package antlr4gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LinterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MACRO_BLOCK=1, MACRO_NAME=2, LABEL_DEF=3, ADDSUB=4, ADRL=5, BRANCH=6, 
		BRANCHLINK=7, BRANCHLINKX=8, BRANCHX=9, BRANXJAZELLE=10, BKPT=11, CPS=12, 
		NEG=13, CBNZ=14, CLZ=15, CMP=16, MOV=17, MOVT=18, MOVW=19, MOV32=20, MUL=21, 
		MLA=22, MLS=23, DIV=24, LDR=25, LDRD=26, STR=27, STRD=28, LDRT=29, STRT=30, 
		LSL=31, ASR=32, LSR=33, ROR=34, RRX=35, LOGIC=36, TEST=37, IT=38, SEL=39, 
		BFX=40, BFC=41, BFI=42, NOP=43, LDMSTM=44, DUALMULT=45, DUALADD=46, SATURATING16=47, 
		SATURATING=48, SMULXY=49, SMALXY=50, PKH=51, REV=52, SMMUL=53, SMMLAS=54, 
		EXTEND=55, EXTENDADD=56, EVENTS=57, PARALLELOP=58, LONGMULTIPLY=59, TBB=60, 
		TBH=61, CHKA=62, CLREX=63, DBG=64, DMB=65, PRELOADDATA=66, RFE=67, SETEND=68, 
		SMC=69, SMLALXY=70, DUAL16BITMUL=71, SMULW=72, SMLAW=73, SVC=74, UMAAL=75, 
		USAD8=76, USADA8=77, PROGRAMCOUNTER=78, LINKREGISTER=79, CONSTANT=80, 
		INCLUDE=81, TEXT=82, DATA=83, THUMBFUNC=84, REPT=85, ENDR=86, DATATYPE=87, 
		WIDTH=88, IFDIR=89, ELSEIFDIR=90, ELSEDIR=91, ENDIFDIR=92, IFDEF=93, IFNDEF=94, 
		GENERICDIRECTIVE=95, SH=96, COND=97, PUSH=98, POP=99, REGISTER=100, ID=101, 
		INT=102, INT_HEX=103, INT_BIN=104, PLUS=105, MINUS=106, STAR=107, SLASH=108, 
		MOD=109, ET=110, TILDE=111, PIPE=112, XOR=113, LSHIFT=114, RSHIFT=115, 
		LPAREN=116, RPAREN=117, LBRACKET=118, RBRACKET=119, LSQRBRACKET=120, RSQRBRACKET=121, 
		EXCLAMATION=122, COMMA=123, COLON=124, HASH=125, ASSIGN=126, EQ=127, NE=128, 
		LE=129, GE=130, LT=131, GT=132, SPEC=133, STRING=134, WS=135, LINE_COMMENT=136, 
		BLOCK_COMMENT=137, OPERANDS_NEWLINE=138, OPERANDS_WS=139, OPERANDS_LINE_COMMENT=140, 
		OPERANDS_BLOCK_COMMENT=141, OPERANDS_LSL=142, OPERANDS_ASR=143, OPERANDS_LSR=144, 
		OPERANDS_ROR=145;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_instruction = 2, RULE_routine = 3, 
		RULE_routineBody = 4, RULE_routineBlock = 5, RULE_push = 6, RULE_pop = 7, 
		RULE_routineBX = 8, RULE_regList = 9, RULE_regElem = 10, RULE_reptBlock = 11, 
		RULE_variableDecl = 12, RULE_arithmeticInstr = 13, RULE_mulInstr = 14, 
		RULE_mulASInstr = 15, RULE_adrInstr = 16, RULE_movInstr = 17, RULE_movtInstr = 18, 
		RULE_mov32Instr = 19, RULE_branch = 20, RULE_bkptInstr = 21, RULE_cpsInstr = 22, 
		RULE_cbzInstr = 23, RULE_compInstr = 24, RULE_ldrInstr = 25, RULE_strInstr = 26, 
		RULE_ldrdInstr = 27, RULE_strdInstr = 28, RULE_ldrtInstr = 29, RULE_strtInstr = 30, 
		RULE_itInstr = 31, RULE_shift = 32, RULE_shiftInstruction = 33, RULE_rrxIntrstuction = 34, 
		RULE_bfxInstr = 35, RULE_bfiInstr = 36, RULE_bfcInstr = 37, RULE_divInstr = 38, 
		RULE_testInstr = 39, RULE_nopInstr = 40, RULE_selInstr = 41, RULE_plInstr = 42, 
		RULE_nondwordOption = 43, RULE_dwordOption = 44, RULE_memOption2 = 45, 
		RULE_memOption3 = 46, RULE_memOption4 = 47, RULE_shiftOperand = 48, RULE_shiftOption = 49, 
		RULE_logicInstr = 50, RULE_clzInstr = 51, RULE_parallelOpInstr = 52, RULE_ldrStrMultipleInstr = 53, 
		RULE_dualMultInstr = 54, RULE_dualAddInstr = 55, RULE_saturating16Instr = 56, 
		RULE_saturatingInstr = 57, RULE_smulxyInstr = 58, RULE_smalxyInstr = 59, 
		RULE_smmulInstr = 60, RULE_smmlasInstr = 61, RULE_extendInstr = 62, RULE_extendAddInstr = 63, 
		RULE_eventInstr = 64, RULE_movwInstr = 65, RULE_negInstr = 66, RULE_tbbInstr = 67, 
		RULE_tbhInstr = 68, RULE_packHalfWordInstr = 69, RULE_reverseInstr = 70, 
		RULE_longMultiplyInstr = 71, RULE_checkArrayInstr = 72, RULE_clearExInstr = 73, 
		RULE_debugInstr = 74, RULE_dmbInstr = 75, RULE_rfeInstr = 76, RULE_setendInstr = 77, 
		RULE_smcInstr = 78, RULE_smlalxyInstr = 79, RULE_dual16bitmulInstr = 80, 
		RULE_smulwInstr = 81, RULE_smlawInstr = 82, RULE_svcInstr = 83, RULE_umaalInstr = 84, 
		RULE_usad8Instr = 85, RULE_usada8Instr = 86, RULE_register = 87, RULE_labelDef = 88, 
		RULE_labelRef = 89, RULE_equDirective = 90, RULE_datatype = 91, RULE_dataOnlyDecl = 92, 
		RULE_genericDirective = 93, RULE_include = 94, RULE_directive = 95, RULE_immediate = 96, 
		RULE_literal = 97, RULE_op2 = 98, RULE_flexop2 = 99, RULE_macroCall = 100, 
		RULE_conditionalBlock = 101, RULE_ifBlock = 102, RULE_elseIfBlock = 103, 
		RULE_elseBlock = 104, RULE_ifdefBlock = 105, RULE_ifndefBlock = 106, RULE_constExpr = 107, 
		RULE_constPrimary = 108;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "instruction", "routine", "routineBody", "routineBlock", 
			"push", "pop", "routineBX", "regList", "regElem", "reptBlock", "variableDecl", 
			"arithmeticInstr", "mulInstr", "mulASInstr", "adrInstr", "movInstr", 
			"movtInstr", "mov32Instr", "branch", "bkptInstr", "cpsInstr", "cbzInstr", 
			"compInstr", "ldrInstr", "strInstr", "ldrdInstr", "strdInstr", "ldrtInstr", 
			"strtInstr", "itInstr", "shift", "shiftInstruction", "rrxIntrstuction", 
			"bfxInstr", "bfiInstr", "bfcInstr", "divInstr", "testInstr", "nopInstr", 
			"selInstr", "plInstr", "nondwordOption", "dwordOption", "memOption2", 
			"memOption3", "memOption4", "shiftOperand", "shiftOption", "logicInstr", 
			"clzInstr", "parallelOpInstr", "ldrStrMultipleInstr", "dualMultInstr", 
			"dualAddInstr", "saturating16Instr", "saturatingInstr", "smulxyInstr", 
			"smalxyInstr", "smmulInstr", "smmlasInstr", "extendInstr", "extendAddInstr", 
			"eventInstr", "movwInstr", "negInstr", "tbbInstr", "tbhInstr", "packHalfWordInstr", 
			"reverseInstr", "longMultiplyInstr", "checkArrayInstr", "clearExInstr", 
			"debugInstr", "dmbInstr", "rfeInstr", "setendInstr", "smcInstr", "smlalxyInstr", 
			"dual16bitmulInstr", "smulwInstr", "smlawInstr", "svcInstr", "umaalInstr", 
			"usad8Instr", "usada8Instr", "register", "labelDef", "labelRef", "equDirective", 
			"datatype", "dataOnlyDecl", "genericDirective", "include", "directive", 
			"immediate", "literal", "op2", "flexop2", "macroCall", "conditionalBlock", 
			"ifBlock", "elseIfBlock", "elseBlock", "ifdefBlock", "ifndefBlock", "constExpr", 
			"constPrimary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "'bkpt'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'tbb'", "'tbh'", "'CHKA'", null, null, null, null, null, "'SETEND'", 
			null, null, null, null, null, null, null, null, null, null, null, "'.equ'", 
			"'.include'", "'.text'", "'.data'", "'.thumb_func'", "'.rept'", "'.endr'", 
			null, "'.W'", "'.if'", "'.elseif'", "'.else'", "'.endif'", "'.ifdef'", 
			"'.ifndef'", null, "'sh'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'lsl'", "'asr'", "'lsr'", "'ror'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MACRO_BLOCK", "MACRO_NAME", "LABEL_DEF", "ADDSUB", "ADRL", "BRANCH", 
			"BRANCHLINK", "BRANCHLINKX", "BRANCHX", "BRANXJAZELLE", "BKPT", "CPS", 
			"NEG", "CBNZ", "CLZ", "CMP", "MOV", "MOVT", "MOVW", "MOV32", "MUL", "MLA", 
			"MLS", "DIV", "LDR", "LDRD", "STR", "STRD", "LDRT", "STRT", "LSL", "ASR", 
			"LSR", "ROR", "RRX", "LOGIC", "TEST", "IT", "SEL", "BFX", "BFC", "BFI", 
			"NOP", "LDMSTM", "DUALMULT", "DUALADD", "SATURATING16", "SATURATING", 
			"SMULXY", "SMALXY", "PKH", "REV", "SMMUL", "SMMLAS", "EXTEND", "EXTENDADD", 
			"EVENTS", "PARALLELOP", "LONGMULTIPLY", "TBB", "TBH", "CHKA", "CLREX", 
			"DBG", "DMB", "PRELOADDATA", "RFE", "SETEND", "SMC", "SMLALXY", "DUAL16BITMUL", 
			"SMULW", "SMLAW", "SVC", "UMAAL", "USAD8", "USADA8", "PROGRAMCOUNTER", 
			"LINKREGISTER", "CONSTANT", "INCLUDE", "TEXT", "DATA", "THUMBFUNC", "REPT", 
			"ENDR", "DATATYPE", "WIDTH", "IFDIR", "ELSEIFDIR", "ELSEDIR", "ENDIFDIR", 
			"IFDEF", "IFNDEF", "GENERICDIRECTIVE", "SH", "COND", "PUSH", "POP", "REGISTER", 
			"ID", "INT", "INT_HEX", "INT_BIN", "PLUS", "MINUS", "STAR", "SLASH", 
			"MOD", "ET", "TILDE", "PIPE", "XOR", "LSHIFT", "RSHIFT", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "LSQRBRACKET", "RSQRBRACKET", "EXCLAMATION", 
			"COMMA", "COLON", "HASH", "ASSIGN", "EQ", "NE", "LE", "GE", "LT", "GT", 
			"SPEC", "STRING", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "OPERANDS_NEWLINE", 
			"OPERANDS_WS", "OPERANDS_LINE_COMMENT", "OPERANDS_BLOCK_COMMENT", "OPERANDS_LSL", 
			"OPERANDS_ASR", "OPERANDS_LSR", "OPERANDS_ROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinterParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LinterParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinterParserListener ) ((LinterParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinterParserListener ) ((LinterParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -2L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 55343792127L) != 0)) {
				{
				{
				setState(218);
				statement();
				}
				}
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(224);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ReptBlockContext reptBlock() {
			return getRuleContext(ReptBlockContext.class,0);
		}
		public VariableDeclContext variableDecl() {
			return getRuleContext(VariableDeclContext.class,0);
		}
		public DataOnlyDeclContext dataOnlyDecl() {
			return getRuleContext(DataOnlyDeclContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LabelDefContext labelDef() {
			return getRuleContext(LabelDefContext.class,0);
		}
		public RoutineContext routine() {
			return getRuleContext(RoutineContext.class,0);
		}
		public EquDirectiveContext equDirective() {
			return getRuleContext(EquDirectiveContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public TerminalNode MACRO_BLOCK() { return getToken(LinterParser.MACRO_BLOCK, 0); }
		public MacroCallContext macroCall() {
			return getRuleContext(MacroCallContext.class,0);
		}
		public ConditionalBlockContext conditionalBlock() {
			return getRuleContext(ConditionalBlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinterParserListener ) ((LinterParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinterParserListener ) ((LinterParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(240);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(226);
				reptBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(227);
				variableDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(228);
				dataOnlyDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(229);
				instruction();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(230);
				labelDef();
				setState(232);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(231);
					instruction();
					}
					break;
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(234);
				routine();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(235);
				equDirective();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(236);
				directive();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(237);
				match(MACRO_BLOCK);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(238);
				macroCall();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(239);
				conditionalBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
